# 2020-RMTJ-OPENCV

./: 2value.cpp  CMakeLists.txt  README.md  gray.cpp  main.cpp
task 1/: README.md
task 1/tzx/main/: CMakeLists.txt  main.cpp
task 1/tzx/test/: CMakeLists.txt  test.cpp
task 1/庄镇华/task1_2/: CMakeLists.txt  main.cpp
task 1/庄镇华/task1_3/: CMakeLists.txt  test.cpp
task 1/李乐阳二值化/: CMakeLists.txt  main.cpp
task 2/: README.md
task 2/庄镇华/: main.cpp
task2/tzx/: CMakeLists.txt  main.cpp
tzx/task 1/main/: main.cpp
tzx/task 1/test/: test.cpp
tzx/task 2/: CMakeLists.txt  main.cpp
李乐阳HELLOWORLD/: CMakeLists.txt
李乐阳第一次任务/: CMakeCache.txt  Makefile  cmake_install.cmake  hello
